<resources>
    <string name="app_name">PerintisAdminApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_perintis">Logo perintis</string>
    <string name="email">Email</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">Password</string>
    <string name="masukkan_email_yang_telah_tedaftar_untuk_mendapat_intruksi_reset_password">Masukkan email yang telah tedaftar untuk mendapat intruksi reset password</string>
    <string name="kirim_link">Kirim Link</string>
    <string name="illustrasi_reset_password">Illustrasi reset password</string>
    <string name="kembali_login">Kembali Login</string>
    <string name="pengiriman_link_reset_password_telah_terkirim_ncek_emailmu_untuk_melakukan_reset_password">Pengiriman link reset password telah terkirim.\nCek emailmu untuk melakukan reset password.</string>
    <string name="illustrasi_cek_email">Illustrasi cek email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mobil">Mobil</string>
    <string name="user">User</string>
    <string name="tour">Tour</string>
    <string name="belum_dikonfirmasi">Belum Dikonfirmasi</string>
    <string name="on_progress">On Progress</string>
    <string name="selesai">Selesai</string>
    <string name="menunggu">Menunggu</string>
    <string name="info_pemesanan_mobil">Info Pemesanan Mobil</string>
    <string name="booking_mobil">Booking Mobil</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="mengajukan_mitra">Mengajukan Mitra</string>
    <string name="tanggal">Tanggal</string>
    <string name="dashboard">Dashboard</string>
    <string name="admin">Admin</string>
    <string name="mitra">Mitra</string>
    <string name="booking">Booking</string>
    <string name="booking_tour">Booking Tour</string>
    <string name="registrasi_mitra">Registrasi Mitra</string>
    <string name="registrasi_mobil_mitra">Registrasi Mobil Mitra</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Logout</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="fab_add_car">Fab add car</string>
    <string name="pemilik">Pemilik</string>
    <string name="tahun">Tahun</string>
    <string name="harga">Harga</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="durasi">Durasi</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="transmisi">Transmisi</string>
    <string name="type_mobil">Type Mobil</string>
    <string name="transmision">Transmisi:</string>
    <string name="tahunmobil">Tahun:</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="informasi">Informasi</string>
    <string name="lokasi_pengambilan">Lokasi Pengambilan</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="tidak_ada_bukti_pembayaran">Tidak ada bukti pembayaran</string>
    <string name="hapus_pesanan">Hapus Pesanan</string>
    <string name="tambah_admin">Tambah Admin</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="telephone">Telephone</string>
    <string name="nama_admin">Nama Admin</string>
    <string name="nama_mitra">Nama Mitra</string>
    <string name="alamat">Alamat</string>
    <string name="tambah_mitra">Tambah Mitra</string>
    <string name="travel_name">Travel Name</string>
    <string name="edit_mitra">Edit Mitra</string>
    <string name="delete_mitra">Delete Mitra</string>
    <string name="informasi_mobil">Informasi Mobil</string>
    <string name="no_mobil">No. Mobil</string>
    <string name="kapasitas_koper">Kapasitas Koper</string>
    <string name="harga_perhari">Harga perhari</string>
    <string name="hapus_mobile">Hapus Mobil</string>
    <string name="kapasitas_orang">Kapasitas Orang</string>
    <string name="harga_perhari_dalam_rupiah">Harga Perhari Dalam Rupiah</string>
    <string name="tambah_mobil">Tambah Mobil</string>
    <string name="gambar_mobil">Gambar Mobil</string>
    <string name="nomer_registrasi">Nomer Registrasi</string>
    <string name="nama_tour">Nama Tour</string>
    <string name="lokasi_tour">Lokasi Tour</string>
    <string name="harga_per_orang">Harga Per Orang</string>
    <string name="kendaraan_tour">Kendaraan Tour</string>
    <string name="kapasitas_tour">Kapasitas Tour</string>
    <string name="rentang_waktu_tour">Rentang Waktu Tour</string>
    <string name="durasi_tour">Durasi Tour</string>
    <string name="wisata_yang_dikunjungi">Wisata Yang Dikunjungi</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_tour">Tambah Tour</string>
    <string name="gambar_tour">Gambar Tour</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="hapus_wisata">Hapus Wisata</string>
    <string name="lokasi_penjemputan">Lokasi Penjemputan</string>
    <string name="informasi_calon_mitra">Informasi Calon Mitra</string>
    <string name="nama">Nama</string>
    <string name="titik_dua">:</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
</resources>