<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.azhara.perintisadminapp.ui.home.ui.dashboard.HomeFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_car"
        android:name="com.azhara.perintisadminapp.ui.home.ui.car.CarFragment"
        android:label="@string/mobil"
        tools:layout="@layout/fragment_car" />

    <fragment
        android:id="@+id/nav_tour"
        android:name="com.azhara.perintisadminapp.ui.home.ui.tour.TourFragment"
        android:label="@string/tour"
        tools:layout="@layout/fragment_tour" />
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.azhara.perintisadminapp.ui.home.ui.admin.AdminFragment"
        android:label="@string/admin"
        tools:layout="@layout/fragment_admin" >
        <action
            android:id="@+id/action_nav_admin_to_addAdminFragment"
            app:destination="@id/addAdminFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_booking_tour"
        android:name="com.azhara.perintisadminapp.ui.home.ui.bookingtour.BookingTourFragment"
        android:label="@string/booking_tour"
        tools:layout="@layout/fragment_booking_tour" />
    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.azhara.perintisadminapp.ui.home.ui.changepassword.ChangePasswordFragment"
        android:label="@string/ganti_password"
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_nav_change_password_to_nav_dashboard"
            app:destination="@id/nav_dashboard"
            app:popUpTo="@id/nav_dashboard"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_mitra"
        android:name="com.azhara.perintisadminapp.ui.home.ui.mitra.MitraFragment"
        android:label="@string/mitra"
        tools:layout="@layout/fragment_mitra" >
        <action
            android:id="@+id/action_nav_mitra_to_addMitraFragment"
            app:destination="@id/addMitraFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_register_car"
        android:name="com.azhara.perintisadminapp.ui.home.ui.carmitraregister.MitraCarRegisterFragment"
        android:label="@string/registrasi_mobil_mitra"
        tools:layout="@layout/fragment_mitra_car_register" />
    <fragment
        android:id="@+id/nav_mitra_register"
        android:name="com.azhara.perintisadminapp.ui.home.ui.mitraregister.MitraRegisterFragment"
        android:label="@string/registrasi_mitra"
        tools:layout="@layout/fragment_mitra_register" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.azhara.perintisadminapp.ui.home.ui.user.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/nav_booking_car"
        android:name="com.azhara.perintisadminapp.ui.home.ui.bookingcar.BookingCarFragment"
        android:label="@string/booking_mobil"
        tools:layout="@layout/fragment_booking_car">
        <action
            android:id="@+id/action_nav_booking_car_to_detailBookingCarFragment"
            app:destination="@id/detailBookingCarFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailBookingCarFragment"
        android:name="com.azhara.perintisadminapp.ui.home.ui.bookingcar.DetailBookingCarFragment"
        android:label="Detail Booking Car"
        tools:layout="@layout/fragment_detail_booking_car" >
        <argument
            android:name="bookingData"
            app:argType="com.azhara.perintisadminapp.entity.BookingData"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_detailBookingCarFragment_to_nav_booking_car"
            app:destination="@id/nav_booking_car"
            app:popUpTo="@id/nav_dashboard"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addAdminFragment"
        android:name="com.azhara.perintisadminapp.ui.home.ui.admin.AddAdminFragment"
        android:label="@string/tambah_admin"
        tools:layout="@layout/fragment_add_admin" >
        <action
            android:id="@+id/action_addAdminFragment_to_nav_admin"
            app:destination="@id/nav_admin"
            app:popUpTo="@id/nav_dashboard"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addMitraFragment"
        android:name="com.azhara.perintisadminapp.ui.home.ui.mitra.AddMitraFragment"
        android:label="Add Mitra"
        tools:layout="@layout/fragment_add_mitra" >
        <action
            android:id="@+id/action_addMitraFragment_to_nav_mitra"
            app:destination="@id/nav_mitra"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>